--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.6.1",
     "nodemon": "^3.1.0",
+    "pg": "^8.11.5",
     "socket.io": "^4.7.5"
   }
 }
