--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --logHeapUsage",
     "start": "nodemon src/index.js"
   },
   "author": "",
